@@ -2,6 +2,8 @@
 
 Personalist Encyclopedia
 
+Start with `$ PORT=3017 clojure -X:xtdb`.
+
 ---
 
 curl -X POST http://localhost:3017/graphql \
@@ -10,5 +12,4 @@ curl -X POST http://localhost:3017/graphql \
 
 curl -X POST http://localhost:3017?query="{ identitiesByPersonId(personName: \"dan\") { identity text }}"
 
-Procfile
-web: java --add-opens=java.base/java.nio=ALL-UNNAMED -Dio.netty.tryReflectionSetAccessible=true -cp server.jar clojure.main -m et.pe.server
+---
